fix api-keys
